[package]
name = "image-pixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
image = "0.24.7"
