[package]
name = "imgpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
image = {version = "0.24.7", default-features = false, features=["jpeg", "png", "tiff", "webp", "bmp"]}
serde = "1.0.188"
serde_json = "1.0.107"
zip = "0.6.6"
